--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form method="post" action="/login" enctype="multipart/form-data">
+        <form method="post" action="/login">
             Name : <input type="text" name="name" /><br />
             Password : <input type="password" name="password"><br />
             <input type="submit" name="login" /> 
